[metadata]
name = nnsmith
description = "Automatic DNN generation for fuzzing and more."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ise-uiuc/nnsmith
license = Apache-2.0
license_file = LICENSE
platform = any

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    z3-solver>=4.11.0
    hydra-core>=1.2.0
    hydra-colorlog>=1.2.0
    multipledispatch>=0.6.0
    appdirs>=1.4.4
    numpy

# TODO: make it nightly.
[options.extras_require]
onnx = torch
       onnx
onnxruntime = onnxruntime
      torch
      onnx
tensorflow = tf-nightly
torch = torch
tvm = apache-tvm
      torch
      onnx

[options.package_data]
nnsmith = config/**/*.yaml

[options.entry_points]
console_scripts =
    nnsmith.model_gen = nnsmith.cli.model_gen:main
    nnsmith.model_exec = nnsmith.cli.model_exec:main
    nnsmith.dtype_test = nnsmith.cli.dtype_test:main
    nnsmith.fuzz = nnsmith.cli.fuzz:main
    nnsmith.report_syn = nnsmith.cli.report_syn:main
